==> sshahryiar/STM8-Tutorial/Code Examples/OLED - SSD1306/src/SSD1306.c <==
#include "fonts.h"
#include "SSD1306.h"

void OLED_write(unsigned char value, unsigned char control_byte)
{
    while(I2C_GetFlagStatus(I2C_FLAG_BUSBUSY));
	
	I2C_GenerateSTART(ENABLE);
    while(!I2C_CheckEvent(I2C_EVENT_MASTER_MODE_SELECT));
   
    I2C_Send7bitAddress(SSD1306_I2C_Address, I2C_DIRECTION_TX); 
    while(!I2C_CheckEvent(I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED));
   
    I2C_SendData(control_byte);
    while(!I2C_CheckEvent(I2C_EVENT_MASTER_BYTE_TRANSMITTING));
	
    I2C_SendData(value);
    while(!I2C_CheckEvent(I2C_EVENT_MASTER_BYTE_TRANSMITTED));

    I2C_GenerateSTOP(ENABLE);  
}

void OLED_fill(unsigned char bmp_data)
{
    unsigned char x_pos = 0x00;
    unsigned char page = 0x00;

    for(page = 0; page < y_max; page++)
    {
        OLED_gotoxy(x_min, page);
        
        I2C_GenerateSTART(ENABLE);
        while(!I2C_CheckEvent(I2C_EVENT_MASTER_MODE_SELECT));
       
        I2C_Send7bitAddress(SSD1306_I2C_Address, I2C_DIRECTION_TX); 
        while(!I2C_CheckEvent(I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED));
       
        I2C_SendData(DAT);
        while(!I2C_CheckEvent(I2C_EVENT_MASTER_BYTE_TRANSMITTING));    

        for(x_pos = x_min; x_pos < x_max; x_pos++)
        {
           I2C_SendData(bmp_data);
		   while(!I2C_CheckEvent(I2C_EVENT_MASTER_BYTE_TRANSMITTED));  
        }
		
        I2C_GenerateSTOP(ENABLE);  
    }
}

void OLED_print_Image(const unsigned char *bmp, unsigned char pixel)
{
    unsigned char x_pos = 0;
    unsigned char page = 0;
   
    if(pixel != OFF)
    {
        pixel = 0xFF;
    }
    else
    {
        pixel = 0x00;
    }
   
    for(page = 0; page < y_max; page++)
    {
         OLED_gotoxy(x_min, page);

         I2C_GenerateSTART(ENABLE);
         while(!I2C_CheckEvent(I2C_EVENT_MASTER_MODE_SELECT));
       
         I2C_Send7bitAddress(SSD1306_I2C_Address, I2C_DIRECTION_TX); 
         while(!I2C_CheckEvent(I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED));
       
         I2C_SendData(DAT);
         while(!I2C_CheckEvent(I2C_EVENT_MASTER_BYTE_TRANSMITTING));    

         for(x_pos = x_min; x_pos < x_max; x_pos++)
         {
            I2C_SendData((*bmp++ ^ pixel));
            while(!I2C_CheckEvent(I2C_EVENT_MASTER_BYTE_TRANSMITTED));
         }

		 I2C_GenerateSTOP(ENABLE); 
     }
}
