==> ArmstrongSubero/PIC32-Projects/24_SSD1306.X/SSD1306.c <==
#include "fonts.c"
#include "SSD1306.h"
#include "i2c.h"
#include <string.h>
#define OLED_SETCONTRAST 0x81
#define OLED_DISPLAYALLON_RESUME 0xA4
#define OLED_DISPLAYALLON 0xA5
#define OLED_NORMALDISPLAY 0xA6
#define OLED_INVERTDISPLAY 0xA7
#define OLED_DISPLAYOFF 0xAE
#define OLED_DISPLAYON 0xAF
#define OLED_SETDISPLAYOFFSET 0xD3
#define OLED_SETCOMPINS 0xDA
#define OLED_SETVCOMDETECT 0xDB
#define OLED_SETDISPLAYCLOCKDIV 0xD5
#define OLED_SETPRECHARGE 0xD9
#define OLED_SETMULTIPLEX 0xA8
#define OLED_SETLOWCOLUMN 0x00
#define OLED_SETHIGHCOLUMN 0x10
#define OLED_SETSTARTLINE 0x40
#define OLED_MEMORYMODE 0x20
#define OLED_COLUMNADDR 0x21
#define OLED_PAGEADDR   0x22
#define OLED_COMSCANINC 0xC0
#define OLED_COMSCANDEC 0xC8
#define OLED_SEGREMAP 0xA0
#define OLED_CHARGEPUMP 0x8D

void OLED_write(unsigned char value, unsigned char control_byte)
{
    i2c_master_start();                    // issue I2C start signal
    i2c_master_send(0x3C<<1);  // send byte via I2C  (device address + W)
    i2c_master_send(control_byte);                    // send byte (address of EEPROM location)
    i2c_master_send(value);                 // send data (data to be written)
    i2c_master_stop();                     // issue I2C stop signal
}

void OLED_fill(unsigned char bmp_data)
{
    unsigned char x_pos = 0x00;
    unsigned char page = 0x00;

    for(page = 0; page < y_max; page++)
    {
        OLED_gotoxy(x_min, page);
        
        i2c_master_start();
        i2c_master_send(SSD1306_I2C_Address);
        i2c_master_send(DAT);
        
        for(x_pos = x_min; x_pos < x_max; x_pos++)
        {
           i2c_master_send(bmp_data);
        }
        
        i2c_master_stop();
    }
}

void OLED_print_Image(const unsigned char *bmp, unsigned char pixel)
{
    unsigned char x_pos = 0;
    unsigned char page = 0;
   
    if(pixel != 0)
    {
        pixel = 0xFF;
    }
    else
    {
        pixel = 0x00;
    }
   
    for(page = 0; page < y_max; page++)
    {
         OLED_gotoxy(x_min, page);
         i2c_master_start();
         i2c_master_send(SSD1306_I2C_Address);
         i2c_master_send(DAT);

         for(x_pos = x_min; x_pos < x_max; x_pos++)
         {
            i2c_master_send((*bmp++ ^ pixel));
         }

         i2c_master_stop();
     }
}
